# x52-rs

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
x52-device/: Cargo.toml
x52-device/src/: device.rs  lib.rs
x52-hid/: Cargo.toml
x52-hid/examples/: basic_input.rs
x52-hid/src/: device.rs  error.rs  input.rs  lib.rs  parser.rs  report.rs
x52-usb/: Cargo.toml
x52-usb/examples/: batch_update.rs  led_control.rs  mfd_text.rs
x52-usb/src/: clock.rs  device.rs  error.rs  led.rs  lib.rs  mfd.rs  misc.rs  protocol.rs
